fix: modify header positioning
Header was covering map. Changed it to position sticky and reset some map styles also.

--- a/css/styles.css
+++ b/css/styles.css
@@ -130,9 +130,9 @@ body {
 
 header {
   width: 100%;
-  position: fixed;
+  position: sticky;
   top: 0;
-  z-index: 10000; /* high z-index needed to override mapbox z-index*/
+  z-index: 10000; /* high z-index needed to override mapbox z-index */
 }
 
 nav,
@@ -217,10 +217,9 @@ main {
 
 /* ================================= Map ==================================== */
 #map {
-  margin-top: 80px; /* 80px comes from the approx size of the header ish */
-  min-height: calc(50vh - (80px/2));
   /* /2 we want map to look like it takes up half of page vertically minus the header*/
-  background-color: var(--color-light);
+  /* 137px is the min size of .inside header */
+  min-height: calc(50vh - (137px/2));
 }
 
 /* index.html */
